--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <!-- End #about -->
 
-    <div id="experience" class="background-alt">
+    <!-- <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
@@ -110,7 +110,7 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End #experience -->
 
     <div id="education">
@@ -151,15 +151,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/towers-wake-logo.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Tower's Wake</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Tower's Wake is a browser-based Tower Defense game, made almost completely in JavaScript with no use of Flash or other in-browser game engines. Made by Dirk Stockton, Ghett Lee, Travis Rodowick, Rebecca Hernandez and William Dunn, Tower's Wake is currently in Alpha v0.1. We originally made Tower's Wake for our first class project at the UC Davis Coding Bootcamp, but we've all agreed to continue development of the game as time allows.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://justice4none.github.io/AllEnergyProject/" target="_blank">Play Tower's Wake</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -167,15 +167,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/giphy-logo.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Giphy Search</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This is one homework assignment that I'm particularly proud of. I used the Giphy Search API to create an external search engine for GIFs through Giphy. There's not too much to this one, but it was fun to make and it's certainly not the worst thing I've made.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://justice4none.github.io/giphy-api/" target="_blank">Go to Giphy Search</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -201,7 +201,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/pikablu112@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -228,20 +228,11 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Justice4None" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
