--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li>
                 <a href="#about">About</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#experience">Experience</a>
-            </li>
+            </li> -->
             <li>
                 <a href="#education">Education</a>
             </li>
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>William Dunn</h1>
             <h2>Web Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I'm 19 years old, born in Sacramento, California, and I have two cats named Maestro and Dora. I have an extensive background in computer use and I can't imagine a better field of work to go into than web design. I've played guitar for almost a decade, and I've played video games even longer. For examples of my work (alone or with a team), please scroll down to the "Projects" section. I pride myself on dedicating all the time necissary to any given project to make it as good as possible. To see my education as of now, please scroll down to the "Education" section. Once I have some job experience, I will add an "Experience" section. I hope you like what you see and I look forward to speaking with you!
                     </p>
                 </div>
             </div>
@@ -120,7 +118,7 @@
             <span class="education-date">May 2017</span>
             <h4>High School Diploma</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                I graduated from highschool (homeschooled) in May of 2017. Previously, I attended John W. Finney High School and Vallejo High School. 
             </p>
         </div>
         <!-- End .education-block -->
@@ -129,17 +127,9 @@
             <h3>UC Davis Extension: Coding Bootcamp</h3>
             <span class="education-date">June - November 2019</span>
             <h4>Certificate of Completion</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <p>
+                I began taking classes at the UC Davis Coding Bootcamp on June 3rd, 2019. I will graduate in late November 2019. This is my first stab at higher education.
+            </p>
         </div>
         <!-- End .education-block -->
     </div>
