Added more projects and social media

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>William Dunn: Web Developer</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -73,7 +73,14 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm 19 years old, born in Sacramento, California, and I have two cats named Maestro and Dora. I have an extensive background in computer use and I can't imagine a better field of work to go into than web design. I've played guitar for almost a decade, and I've played video games even longer. For examples of my work (alone or with a team), please scroll down to the "Projects" section. I pride myself on dedicating all the time necissary to any given project to make it as good as possible. To see my education as of now, please scroll down to the "Education" section. Once I have some job experience, I will add an "Experience" section. I hope you like what you see and I look forward to speaking with you!
+                        I'm 19 years old, born in Sacramento, California, and I have two cats named Maestro and Dora. I
+                        have an extensive background in computer use and I can't imagine a better field of work to go
+                        into than web design. I've played guitar for almost a decade, and I've played video games even
+                        longer. For examples of my work (alone or with a team), please scroll down to the "Projects"
+                        section. I pride myself on dedicating all the time necissary to any given project to make it as
+                        good as possible. To see my education as of now, please scroll down to the "Education" section.
+                        Once I have some job experience, I will add an "Experience" section. I hope you like what you
+                        see and I look forward to speaking with you!
                     </p>
                 </div>
             </div>
@@ -84,7 +91,7 @@
     <!-- <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="Date">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
@@ -92,7 +99,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="Date">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
@@ -100,7 +107,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="Date">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
@@ -118,7 +125,8 @@
             <span class="education-date">May 2017</span>
             <h4>High School Diploma</h4>
             <p>
-                I graduated from highschool (homeschooled) in May of 2017. Previously, I attended John W. Finney High School and Vallejo High School. 
+                I graduated from highschool (homeschooled) in May of 2017. Previously, I attended John W. Finney High
+                School and Vallejo High School.
             </p>
         </div>
         <!-- End .education-block -->
@@ -128,7 +136,8 @@
             <span class="education-date">June - November 2019</span>
             <h4>Certificate of Completion</h4>
             <p>
-                I began taking classes at the UC Davis Coding Bootcamp on June 3rd, 2019. I will graduate in late November 2019. This is my first stab at higher education.
+                I began taking classes at the UC Davis Coding Bootcamp on June 3rd, 2019. I will graduate in late
+                November 2019. This is my first stab at higher education.
             </p>
         </div>
         <!-- End .education-block -->
@@ -137,6 +146,8 @@
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
+        <h4>These are my projects, either complete or otherwise. Newest are at the top, older at the
+            bottom.</h4>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
@@ -147,7 +158,11 @@
                     <div class="project-info">
                         <h3>Tower's Wake</h3>
                         <p>
-                            Tower's Wake is a browser-based Tower Defense game, made almost completely in JavaScript with no use of Flash or other in-browser game engines. Made by Dirk Stockton, Ghett Lee, Travis Rodowick, Rebecca Hernandez and William Dunn, Tower's Wake is currently in Alpha v0.1. We originally made Tower's Wake for our first class project at the UC Davis Coding Bootcamp, but we've all agreed to continue development of the game as time allows.
+                            Tower's Wake is a browser-based Tower Defense game, made almost completely in JavaScript
+                            with no use of Flash or other in-browser game engines. Made by Dirk Stockton, Ghett Lee,
+                            Travis Rodowick, Rebecca Hernandez and William Dunn, Tower's Wake is currently in Alpha
+                            v0.1. We originally made Tower's Wake for our first class project at the UC Davis Coding
+                            Bootcamp, but we've all agreed to continue development of the game as time allows.
                         </p>
                         <a href="https://justice4none.github.io/AllEnergyProject/" target="_blank">Play Tower's Wake</a>
                     </div>
@@ -163,9 +178,48 @@
                     <div class="project-info">
                         <h3>Giphy Search</h3>
                         <p>
-                            This is one homework assignment that I'm particularly proud of. I used the Giphy Search API to create an external search engine for GIFs through Giphy. There's not too much to this one, but it was fun to make and it's certainly not the worst thing I've made.
+                            This is one homework assignment that I'm particularly proud of. I used the Giphy Search API
+                            to create an external search engine for GIFs through Giphy. There's not too much to this
+                            one, but it was fun to make and it's certainly not the worst thing I've made.
                         </p>
                         <a href="https://justice4none.github.io/giphy-api/" target="_blank">Go to Giphy Search</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/trivia-game.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Video Game Trivia</h3>
+                        <p>
+                            This is a very basic, somewhat broken Trivia Game with Video Games as a topic. There are
+                            three categories to choose from, each with 10 unique questions. The code in this project is
+                            very drawn-out and the entire game will be getting redone soon.
+                        </p>
+                        <a href="https://justice4none.github.io/TriviaGame/" target="_blank">Play Video Game Trivia</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/new-vegas-browser.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Fallout: New Vegas Browser Game</h3>
+                        <p>
+                            This is a very small browser game based on one of my favorite game, Fallout: New Vegas. I
+                            took the main factions of Fallout: New Vegas, gave them stats and created a game where you
+                            can fight between them. This will be getting an overhaul as well.
+                        </p>
+                        <a href="https://justice4none.github.io/unit-4-game/" target="_blank">Play the Fallout: New
+                            Vegas Browser Game</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -189,7 +243,7 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Contact Me!</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/pikablu112@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
@@ -218,11 +272,17 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/Justice4None" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Justice4None" target="_blank">My GitHub<i class="fa fa-github"
+                                    aria-hidden="true"></i></a>
                         </li>
-                        <!-- <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li> -->
+                        <li>
+                            <a href="https://twitter.com/justice4none99" target="_blank">My Twitter<i
+                                    class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/william-dunn-368b72190/" target="_blank">My LinkedIn<i
+                                    class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
