Pictures have problems displaying in the .io link, recommitting to see if this fixes it

--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
                             took the main factions of Fallout: New Vegas, gave them stats and created a game where you
                             can fight between them. This will be getting an overhaul as well.
                         </p>
-                        <a href="https://justice4none.github.io/unit-4-game/" target="_blank">Play the Fallout: New
-                            Vegas Browser Game</a>
+                        <a href="https://justice4none.github.io/unit-4-game/" target="_blank">Play the Fallout: New Vegas Browser Game</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
             </div>
         </div>
     </div>
