Pictures have problems displaying in the .io link, recommitting to see if this fixes it

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/towers-wake-logo.png" />
+                        <img src="images/towers-wake-logo.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -172,7 +172,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/giphy-logo.png" />
+                        <img src="images/giphy-logo.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -190,7 +190,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/trivia-game.png" />
+                        <img src="images/trivia-game.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -208,7 +208,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/new-vegas-browser.png" />
+                        <img src="images/new-vegas-browser.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
