--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/towers-wake-logo.PNG" />
+                        <img src="images/towers-wake-logo.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -172,7 +172,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/giphy-logo.PNG" />
+                        <img src="images/giphy-logo.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
