--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                             took the main factions of Fallout: New Vegas, gave them stats and created a game where you
                             can fight between them. This will be getting an overhaul as well.
                         </p>
-                        <a href="https://justice4none.github.io/unit-4-game/" target="_blank">Play the Fallout: New Vegas Browser Game</a>
+                        <a href="https://justice4none.github.io/unit-4-game/" target="_blank">Play the Fallout: New
+                            Vegas Browser Game</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -272,17 +273,20 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/Justice4None" target="_blank">My GitHub<i class="fa fa-github"
+                            <p><i class="fa fa-comment"></i> All thoughts and posts are my own.</p>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Justice4None" target="_blank"><i class="fa fa-github"
                                     aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/justice4none99" target="_blank">My Twitter<i
-                                    class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/justice4none99" target="_blank"><i class="fa fa-twitter"
+                                    aria-hidden="true"></i></a>
                         </li>
-                        <!-- <li>
-                            <a href="https://www.linkedin.com/in/william-dunn-368b72190/" target="_blank">My LinkedIn<i
+                        <li>
+                            <a href="https://www.linkedin.com/in/william-dunn-368b72190/" target="_blank"><i
                                     class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
             </div>
