--- a/index.html
+++ b/index.html
@@ -289,6 +289,12 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-sm seal">
+                    <span id="siteseal">
+                        <script async type="text/javascript"
+                            src="https://seal.godaddy.com/getSeal?sealID=KzKoPcrb6Bk8myxcaQaFAAxCeBpRod04JWWMiXyYpHoKLiDwDbX36VmYip9X"></script>
+                    </span>
+                </div>
             </div>
         </div>
     </footer>
