Added Resume button and link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>William Dunn</h1>
             <h2>Web Developer</h2>
-            <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
+            <a href="https://resume.io/r/iynNBZRiA" target="_blank" class="btn-rounded-white">View Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,11 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm 19 years old, born in Sacramento, California, and I have two cats named Maestro and Dora. I
+                        I'm 20 years old, born in Sacramento, California, and I have two cats named Maestro and Dora. I
                         have an extensive background in computer use and I can't imagine a better field of work to go
                         into than web design. I've played guitar for almost a decade, and I've played video games even
                         longer. For examples of my work (alone or with a team), please scroll down to the "Projects"
-                        section. I pride myself on dedicating all the time necissary to any given project to make it as
+                        section. I pride myself on dedicating all the time necessary to any given project to make it as
                         good as possible. To see my education as of now, please scroll down to the "Education" section.
                         Once I have some job experience, I will add an "Experience" section. I hope you like what you
                         see and I look forward to speaking with you!
@@ -122,10 +122,10 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>High School</h3>
-            <span class="education-date">May 2017</span>
+            <span class="education-date">May 8th, 2017</span>
             <h4>High School Diploma</h4>
             <p>
-                I graduated from highschool (homeschooled) in May of 2017. Previously, I attended John W. Finney High
+                I graduated from highschool (homeschooled) on May 8th, 2017. Previously, I attended John W. Finney High
                 School and Vallejo High School.
             </p>
         </div>
@@ -133,11 +133,10 @@
 
         <div class="education-block">
             <h3>UC Davis Extension: Coding Bootcamp</h3>
-            <span class="education-date">June - November 2019</span>
+            <span class="education-date">November 26th, 2019</span>
             <h4>Certificate of Completion</h4>
             <p>
-                I began taking classes at the UC Davis Coding Bootcamp on June 3rd, 2019. I will graduate in late
-                November 2019. This is my first stab at higher education.
+                I completed the UC Davis Coding Bootcamp on November 26th, 2019.
             </p>
         </div>
         <!-- End .education-block -->
@@ -147,9 +146,30 @@
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <h4>These are my projects, either complete or otherwise. Newest are at the top, older at the
-            bottom.</h4>
+            bottom. These include things I was involved in during the UC Davis Coding Bootcamp or on my own time after
+            it ended.</h4>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project-ale.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project ALE</h3>
+                        <p>
+                            Project ALE is a WiP text-based RPG game made in Python. It's in it's earliest stages right
+                            now, so there isn't too much there yet.
+                        </p>
+                        <a href="https://github.com/Justice4None/Project-ALE" target="_blank">GitHub Repository for
+                            Project ALE</a>
+                        <br>
+                        <a href="https://trello.com/b/nmNnPwfP/project-ale" target="_blank">Trello Board</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/towers-wake-logo.png" />
@@ -159,11 +179,20 @@
                         <h3>Tower's Wake</h3>
                         <p>
                             Tower's Wake is a browser-based Tower Defense game, made almost completely in JavaScript
-                            with no use of Flash or other in-browser game engines. Made by Dirk Stockton, Ghett Lee,
-                            Travis Rodowick, Rebecca Hernandez and William Dunn, Tower's Wake is currently in Alpha
-                            v0.1. We originally made Tower's Wake for our first class project at the UC Davis Coding
-                            Bootcamp, but we've all agreed to continue development of the game as time allows.
+                            with no use of Flash or other in-browser game engines. Tower's Wake was made for Project One
+                            at the UC Davis Coding Bootcamp, with a group of four others.
                         </p>
+                        <a href="https://github.com/MrJoggington/AllEnergyProject" target="_blank">GitHub Repository for
+                            Tower's Wake</a>
+                        <p>
+                            Technologies used in Tower's Wake include:
+                        </p>
+                        <ul>
+                            <ul>HTML</ul>
+                            <ul>CSS and Bootstrap</ul>
+                            <ul>JavaScript and JQuery</ul>
+                            <ul>Firebase for Authentication</ul>
+                        </ul>
                         <a href="https://justice4none.github.io/AllEnergyProject/" target="_blank">Play Tower's Wake</a>
                     </div>
                     <!-- End .project-info -->
@@ -182,49 +211,22 @@
                             to create an external search engine for GIFs through Giphy. There's not too much to this
                             one, but it was fun to make and it's certainly not the worst thing I've made.
                         </p>
+                        <a href="https://github.com/Justice4None/giphy-api" target="_blank">GitHub Repository for Giphy
+                            Search</a>
+                        <p>
+                            Technologies used in Giphy Search include:
+                        </p>
+                        <ul>
+                            <ul>HTML</ul>
+                            <ul>CSS and Bootstrap</ul>
+                            <ul>JavaScript and Bootstrap</ul>
+                            <ul>Giphy's Developer API</ul>
+                        </ul>
                         <a href="https://justice4none.github.io/giphy-api/" target="_blank">Go to Giphy Search</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/trivia-game.PNG" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Video Game Trivia</h3>
-                        <p>
-                            This is a very basic, somewhat broken Trivia Game with Video Games as a topic. There are
-                            three categories to choose from, each with 10 unique questions. The code in this project is
-                            very drawn-out and the entire game will be getting redone soon.
-                        </p>
-                        <a href="https://justice4none.github.io/TriviaGame/" target="_blank">Play Video Game Trivia</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/new-vegas-browser.PNG" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Fallout: New Vegas Browser Game</h3>
-                        <p>
-                            This is a very small browser game based on one of my favorite game, Fallout: New Vegas. I
-                            took the main factions of Fallout: New Vegas, gave them stats and created a game where you
-                            can fight between them. This will be getting an overhaul as well.
-                        </p>
-                        <a href="https://justice4none.github.io/unit-4-game/" target="_blank">Play the Fallout: New
-                            Vegas Browser Game</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
             </div>
         </div>
     </div>
@@ -239,6 +241,11 @@
             <li>JavaScript</li>
             <li>JQuery</li>
             <li>Amature Audio Recording and Editing</li>
+            <li>Node.js</li>
+            <li>React</li>
+            <li>JSON Web Tokens (Theory only)</li>
+            <li>mySQL Databases</li>
+            <li>MongoDB Databases</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -246,7 +253,7 @@
     <div id="contact">
         <h2>Contact Me!</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/pikablu112@gmail.com">
+            <form method="POST" action="https://formspree.io/williampdunn99@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
